VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc17Up.err
[8MB/455.2MB][  1%][>                                                 ][4MB/s]  [24MB/455.2MB][  5%][==>                                               ][8MB/s]  [40MB/455.2MB][  8%][====>                                             ][10MB/s]  [56MB/455.2MB][ 12%][======>                                           ][11.2MB/s]  [64MB/455.2MB][ 14%][=======>                                          ][10.67MB/s]  [80MB/455.2MB][ 17%][========>                                         ][11.43MB/s]  [96MB/455.2MB][ 21%][==========>                                       ][12MB/s]  [104MB/455.2MB][ 22%][===========>                                      ][11.56MB/s]  [120MB/455.2MB][ 26%][=============>                                    ][12MB/s]  [128MB/455.2MB][ 28%][==============>                                   ][11.64MB/s]  [144MB/455.2MB][ 31%][===============>                                  ][12MB/s]  [152MB/455.2MB][ 33%][================>                                 ][11.69MB/s]  [160MB/455.2MB][ 35%][=================>                                ][11.43MB/s]  [168MB/455.2MB][ 36%][==================>                               ][11.2MB/s]  [176MB/455.2MB][ 38%][===================>                              ][11MB/s]  [184MB/455.2MB][ 40%][====================>                             ][10.82MB/s]  [192MB/455.2MB][ 42%][=====================>                            ][10.67MB/s]  [200MB/455.2MB][ 43%][=====================>                            ][10.53MB/s]  [216MB/455.2MB][ 47%][=======================>                          ][10.8MB/s]  [224MB/455.2MB][ 49%][========================>                         ][10.67MB/s]  [232MB/455.2MB][ 50%][=========================>                        ][10.55MB/s]  [240MB/455.2MB][ 52%][==========================>                       ][10.43MB/s]  [248MB/455.2MB][ 54%][===========================>                      ][10.33MB/s]  [264MB/455.2MB][ 57%][============================>                     ][10.56MB/s]  [272MB/455.2MB][ 59%][=============================>                    ][10.46MB/s]  [280MB/455.2MB][ 61%][==============================>                   ][10.37MB/s]  [288MB/455.2MB][ 63%][===============================>                  ][10.29MB/s]  [304MB/455.2MB][ 66%][=================================>                ][10.48MB/s]  [312MB/455.2MB][ 68%][==================================>               ][10.4MB/s]  [320MB/455.2MB][ 70%][===================================>              ][10.32MB/s]  [336MB/455.2MB][ 73%][====================================>             ][10.5MB/s]  [344MB/455.2MB][ 75%][=====================================>            ][10.42MB/s]  [360MB/455.2MB][ 79%][=======================================>          ][10.59MB/s]  [368MB/455.2MB][ 80%][========================================>         ][10.51MB/s]  [384MB/455.2MB][ 84%][==========================================>       ][10.67MB/s]  [392MB/455.2MB][ 86%][===========================================>      ][10.59MB/s]  [400MB/455.2MB][ 87%][===========================================>      ][10.53MB/s]  [416MB/455.2MB][ 91%][=============================================>    ][10.67MB/s]  [424MB/455.2MB][ 93%][==============================================>   ][10.6MB/s]  [440MB/455.2MB][ 96%][================================================> ][10.73MB/s]  [448MB/455.2MB][ 98%][=================================================>][10.67MB/s]  [455.2MB/455.2MB][100%][==================================================][10.84MB/s]  [455.2MB/455.2MB][100%][==================================================][10.59MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_109277/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_109277/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
